Name:           autotool-server
Version:        0.9
Author:         Bertram Felgenhauer
Maintainer:     Bertram Felgenhauer
Stability:      Experimental
Cabal-Version:  >= 1.2
Build-Type:     Simple

Executable autotool.cgi
    Main-Is:        Main.hs
    Hs-Source-Dirs: src
    GHC-Options:    -Wall
    Build-Depends:
        autotool-collection,
        autolib-transport,
        autolib-todoc,
        autolib-output,
        autolib-reader,
        autolib-reporter,
        SHA >= 1.4 && < 1.5,
        base >= 3 && < 3.1,
        bytestring >= 0.9 && < 0.10,
        containers >= 0.2 && < 0.3,
        haxr >= 3000.1 && < 3000.3,
        mtl >= 1.1 && < 1.2,
        parsec >= 2.1 && < 2.2,
        base64-string >= 0.1 && < 0.2,
        pretty >= 1.0 && < 1.1,
        HaXml >= 1.13 && < 1.14
    Extensions:
        FlexibleInstances
        UndecidableInstances
        GeneralizedNewtypeDeriving
