Name:           autotool-server
Version:        0.2.0
Author:         Bertram Felgenhauer
Maintainer:     Bertram Felgenhauer
Stability:      Experimental
Synopsis:       autotool Xml-RPC server
Description:
  This package provides a binary, autotool.cgi, that makes autotool tasks
  available as an Xml-RPC service.
Cabal-Version:  >= 1.2
Build-Type:     Simple

Executable autotool.cgi
    Main-Is:        Main.hs
    Hs-Source-Dirs: src
    GHC-Options:    -Wall
    Build-Depends:
        autotool-collection,
        autolib-transport,
        autolib-todoc,
        autolib-output,
        autolib-reader,
        autolib-reporter,
        SHA >= 1.4 && < 1.5,
        base >= 4 && < 4.3,
        bytestring >= 0.9 && < 0.10,
        containers >= 0.2 && < 0.4,
        haxr >= 3000.5 && < 3000.6,
        mtl >= 1.1 && < 1.2,
        parsec >= 2.1 && < 2.2,
        dataenc >= 0.11 && < 0.14,
        pretty >= 1.0 && < 1.1,
        HaXml >= 1.20 && < 1.21,
        filepath >= 1.1 && < 1.2,
        binary >= 0.5 && < 0.6
    Extensions:
        FlexibleInstances
        UndecidableInstances
        GeneralizedNewtypeDeriving
