Name:           autotool-trial
Version:        0.0.0
License:        GPL
License-File:   LICENSE
Author:         Johannes Waldmann, Mirko Rahn, Alf Richter, Betram Felgenhauer 
                and others
Homepage:       http://www.imn.htwk-leipzig.de/~waldmann/autotool/
Category:       Education
Synopsis:       Online Grading of Exercises in Discrete Mathematics 
                and Computer Science
Cabal-Version:  >= 1.2
Build-type:	Simple

executable Trial.cgi
        main-is: Inter/Trial.hs
        hs-source-dirs: . control ../../common
        build-depends: base==4.*, containers, mtl, directory, random,
            old-locale, old-time, xhtml, process, utf8-string, unix,
            hsql, hsql-mysql, parsec, cgi, obdd, array, pretty, filepath,
            hint, mueval, transformers, smallcheck, QuickCheck, haskell98,
            HUnit, template-haskell, graphviz, dataenc, bytestring,
            prolog == 0.1.*, prolog-graph-lib == 0.1.*, fgl, hashable,
            haskell-src-exts, temporary, syb, strict, haskell-src,
            autolib-todoc, autolib-reader, autolib-data, autolib-util,
            autolib-output, autolib-reporter, autolib-fa, autolib-relation,
            autolib-rewriting, autolib-graph, autolib-dot, autolib-algorithm,
            autolib-transport, autolib-exp, autolib-fta
        other-modules: 
                 Haskell.SmallCheck		    
                 Hilbert.Derivation,
                 Hilbert.Env,
                 Hilbert.Axioms,
                 Hilbert.Syntax,
                 Hilbert.Actions,
                 Hilbert.Central,
                 Hilbert.Param,
                 Rushhour.Central,
                 Rushhour.Data,
                 Rushhour.Move,
                 Algebraic.Relation.Restriction,
                 Algebraic.STGraph,
                 Algebraic.Set,
                 Algebraic.Integer,
                 Algebraic.Central,
                 Algebraic.Class,
                 Algebraic.Config,
                 Algebraic.Instance,
                 Algebraic.Relation,
                 Algebraic.Graph,
                 Algebraic.Nested.Type,
                 Algebraic.Nested.Op,
                 Algebraic.Nested.Restriction,
                 Algebraic.Quiz,
                 Resolution.Roll,
                 Resolution.Central,
                 Resolution.Execute,
                 Resolution.Config,
                 Resolution.Action,
                 Resolution.Data,
                 Control.Punkt,
                 Control.Passwort,
                 Control.Time.CGI,
                 Control.Time.Typ,
                 Control.Gruppe,
                 Control.Direktor.DB,
                 Control.Direktor.CGI,
                 Control.Vorlesung,
                 Control.Aufgabe.DB,
                 Control.Aufgabe.Typ,
                 Control.Stud_Grp.DB,
                 Control.Stud_Grp.Typ,
                 Control.Admin.DB,
                 Control.Admin.CGI,
                 Control.Semester,
                 Control.Time,
                 Control.Gruppe.DB,
                 Control.Gruppe.CGI,
                 Control.Gruppe.Typ,
                 Control.Types,
                 Control.Semester.DB,
                 Control.Semester.CGI,
                 Control.Semester.Typ,
                 Control.Tutor.DB,
                 Control.Aufgabe,
                 Control.Schule.DB,
                 Control.Schule.CGI,
                 Control.Schule.Typ,
                 Control.Stud_Grp,
                 Control.Stud_Aufg,
                 Control.Stud_Aufg.DB,
                 Control.Stud_Aufg.Typ,
                 Control.Student.DB,
                 Control.Student.CGI,
                 Control.Student.Type,
                 Control.Vorlesung.DB,
                 Control.Vorlesung.CGI,
                 Control.Vorlesung.Typ,
                 Control.SQL,
                 Control.Student,
                 Control.Schule,
                 Language,
                 Unify.Main,
                 Unify.Roll,
                 Unify.Config,
                 Unify.Instance,
                 Mysqlconnect,
                 Arithmetic.Op,
                 Program.General.Environment,
                 Program.General.Value,
                 Program.General.Central,
                 Program.General.Class,
                 Program.General.Program,
                 Program.Cexp.Type,
                 Program.Cexp.Annotated,
                 Program.Cexp.Interface,
                 Program.List.Store,
                 Program.List.Roll,
                 Program.List.Value,
                 Program.List.Expression,
                 Program.List.Semantics,
                 Program.List.Operation,
                 Program.List.Config,
                 Program.List.Instance,
                 Program.Array.Operator,
                 Program.Array.Roll,
                 Program.Array.Value,
                 Program.Array.Statement,
                 Program.Array.Expression,
                 Program.Array.Semantics,
                 Program.Array.Config,
                 Program.Array.Instance,
                 Debug,
                 Flow.Trace,
                 Flow.Goto.Semantics,
                 Flow.Goto.Data,
                 Flow.Transit,
                 Flow.Conditions,
                 Flow.Expression,
                 Flow.Struct,
                 Flow.Actions,
                 Flow.Central,
                 Flow.Goto,
                 Flow.Struct.Semantics,
                 Flow.Struct.Data,
                 Flow.State,
                 Flow.Auto,
                 Flow.Program,
                 Flow.Action,
                 Specify.Definition,
                 Specify.Eval,
                 Specify.Expression,
                 Specify.Constraint,
                 Specify.Config,
                 Specify.Check,
                 Specify.Inter,
                 RM.Type,
                 RM.Step,
                 RM.Machine,
                 RM.Make,
                 RM.State,
                 RM.Check,
                 RM.Memory,
                 FP.Reconstruct,
                 FP.Roll,
                 FP.Type,
                 FP.Env,
                 FP.Expression,
                 FP.Instance,
                 FP.Conf,
                 FP.Arrow,
                 FP.Check,
                 FP.Quiz,
                 Peano.Type,
                 Peano.Eval,
                 Peano.Infer,
                 Peano.Machine,
                 Peano.Make,
                 Peano.Data,
                 LCS.Code,
                 LCS.Config,
                 LCS.Instance,
                 LCS.Quiz,
                 LCS.Data,
                 Challenger,
                 Pump.Conf2,
                 Pump.CF,
                 Pump.Type,
                 Pump.Inter2,
                 Pump.Negativ,
                 Pump.Conf,
                 Pump.Positiv,
                 Pump.CF.Type,
                 Pump.Quiz,
                 Pump.REG,
                 Pump.Inter,
                 Pump.REG.Type,
                 Suggest,
                 Local,
                 Rewriting.Overlap,
                 Rewriting.SRS.Steps,
                 Rewriting.SRS.Step,
                 Rewriting.SRS.Raw,
                 Rewriting.SRS.Apply,
                 Rewriting.Derive,
                 Rewriting.TRS,
                 Rewriting.Apply,
                 Rewriting.Roller,
                 Rewriting.Check,
                 Rewriting.TRS.Steps,
                 Rewriting.TRS.Derive,
                 Rewriting.TRS.Step,
                 Rewriting.TRS.Raw,
                 Rewriting.TRS.Apply,
                 Rewriting.TRS.Numerical,
                 Rewriting.TRS.Machine,
                 Rewriting.TRS.Instance,
                 Rewriting.Derive.Config,
                 Rewriting.Derive.Instance,
                 Rewriting.Derive.Quiz,
                 Algebraic2.Central,
                 Algebraic2.Class,
                 Algebraic2.Config,
                 Algebraic2.Instance,
                 Algebraic2.Quiz,
                 Turing.Nachfolger,
                 Turing.Dot,
                 Turing.Type,
                 Turing.Konfiguration,
                 Turing.Machine,
                 Turing.Property,
                 Turing.Config,
                 Turing.Make,
                 Turing.Check,
                 Turing.Example,
                 RAM,
                 Exp.Shortest_Missing,
                 Exp.Roll,
                 Exp.Test,
                 Exp.Smaller,
                 Exp.Property,
                 Exp.Quiz,
                 Exp.Convert,
                 Boolean.Op,
                 Boolean.Eval,
                 Boolean.Equiv,
                 Boolean.Instance,
                 Boolean.Quiz,
                 Robots3.Nice,
                 Robots3.TH,
                 Robots3.Exact,
                 Robots3.Inverse,
                 Robots3.Generator,
                 Robots3.Config,
                 Robots3.Interface,
                 Robots3.Quiz,
                 Robots3.Hull,
                 Robots3.Data,
                 Robots3.Move,
                 Robots3.Examples,
                 Robots3.Solver,
                 Robots3.Final,
                 Baum.Bin,
                 Baum.Binary,
                 Baum.Reconstruct,
                 Baum.Roll,
                 Baum.Type,
                 Baum.ZweiDrei.Type,
                 Baum.ZweiDrei.Ops,
                 Baum.ZweiDrei.Show,
                 Baum.Order,
                 Baum.Draw,
                 Baum.Such.Op,
                 Baum.Such.Generate,
                 Baum.Such.Central,
                 Baum.Such.Class,
                 Baum.Such.Config,
                 Baum.Such.Inter,
                 Baum.AVL,
                 Baum.Traverse,
                 Baum.AVL.Type,
                 Baum.AVL.Ops,
                 Baum.AVL.Show,
                 Baum.Config,
                 Baum.Binary.Type,
                 Baum.Binary.Ops,
                 Baum.Binary.Show,
                 Baum.RedBlack.Type,
                 Baum.RedBlack.Ops,
                 Baum.RedBlack.Show,
                 Baum.ZweiDrei,
                 Baum.RedBlack,
                 Baum.Label,
                 Grammatik.Produktiv,
                 Grammatik.Type,
                 Grammatik.Hierarchie,
                 Grammatik.Reduziert,
                 Grammatik.Ableitung.Config,
                 Grammatik.Akzeptor,
                 Grammatik.Machine,
                 Grammatik.Erreichbar,
                 Grammatik.Property,
                 Grammatik.Config,
                 Grammatik.Ableitung,
                 Grammatik.Check,
                 Grammatik.Zeige,
                 Grammatik.CF.DPL_CYK,
                 Grammatik.CF.CYK_Arrays,
                 Grammatik.CF.Nullable,
                 Grammatik.CF.Epsfrei,
                 Grammatik.CF.Eindeutig,
                 Grammatik.CF.CYK_Tables,
                 Grammatik.CF.Baum,
                 Grammatik.CF.Kettenfrei,
                 Grammatik.CF.Chomsky,
                 Grammatik.CF.Problem.Config,
                 Grammatik.CF.Interface2,
                 Grammatik.CF.Interface,
                 Grammatik.CF.Zeige,
                 Grammatik.CF.Chomsky.Type,
                 Grammatik.CF.Chomsky.Generate,
                 Grammatik.CF.Yeah_Noh,
                 Grammatik.CF.Instance.Config2,
                 Grammatik.CF.Instance.Config,
                 PCProblem.Type,
                 PCProblem.Konfig,
                 PCProblem.Generator,
                 PCProblem.Param,
                 PCProblem.Quiz,
                 PCProblem.Data,
                 PCProblem.Solver,
                 Brainfuck.Env.AdvancedEnv,
                 Brainfuck.Env,
                 Brainfuck.Syntax,
                 Brainfuck.Machine,
                 Brainfuck.Make,
                 Brainfuck.Example,
                 Brainfuck.Syntax.Print,
                 Brainfuck.Syntax.Parse,
                 Brainfuck.Syntax.Data,
                 Inter.Click,
                 Inter.Logged,
                 Inter.Collector,
                 Inter.Language,
                 Inter.Store,
                 Inter.Motd,
                 Inter.Statistik,
                 Inter.Tutor,
                 Inter.DateTime,
                 Inter.Login,
                 Inter.Types,
                 Inter.Bank,
                 Inter.Param,
                 Inter.Make,
                 Inter.Crypt,
                 Inter.Quiz,
                 Inter.Common,
                 Inter.Student,
                 Inter.Evaluate,
                 Palindrom.Plain,
                 Prime.Factorize,
                 Prime.Check,
                 RAM.Type,
                 RAM.Builtin,
                 RAM.Step,
                 RAM.Machine,
                 RAM.Property,
                 RAM.Make,
                 RAM.State,
                 RAM.Check,
                 RAM.Example,
                 RAM.Memory,
                 Hanoi.Type,
                 Hanoi.Semantik,
                 Hanoi.Config,
                 Hanoi.Quiz,
                 Hanoi.Move,
                 Hanoi.Restriction,
                 CL.Derivation,
                 CL.Combinator,
                 CL.Reader,
                 CL.Term,
                 CL.ToDoc,
                 CL.Data,
                 CL.Substitution,
                 CL.Reduce,
                 CL.Find,
                 RSA.Euclid,
                 RSA.Break,
                 RSA.Param,
                 RSA.Quiz,
                 RSA.Break.Data,
                 Codec.Encryption.MD5Aux,
                 Codec.Encryption.Utils,
                 Codec.Encryption.MD5,
                 Tree,
                 Challenger.Ident,
                 Challenger.Einsendung,
                 Challenger.Partial,
                 NFA.Roll,
                 NFA.Test,
                 NFA.Nerode.Incongruent.Solution,
                 NFA.Nerode.Incongruent.Config,
                 NFA.Nerode.Incongruent.Instance,
                 NFA.Nerode.Incongruent.Check,
                 NFA.Nerode.Incongruent.Quiz,
                 NFA.Nerode.Separation.Solution,
                 NFA.Nerode.Separation.Check,
                 NFA.Nerode.Congruent.Config,
                 NFA.Nerode.Congruent.Instance,
                 NFA.Nerode.Congruent.Check,
                 NFA.Nerode.Congruent.Quiz,
                 NFA.Infinite,
                 NFA.Equiv.Challenger,
                 NFA.Equiv.Generate,
                 NFA.Equiv.Core,
                 NFA.Equiv.Conf,
                 NFA.Property,
                 NFA.Compress.Roll,
                 NFA.Compress.Compressed,
                 NFA.Compress.Look,
                 NFA.Compress.Config,
                 NFA.Compress.Instance,
                 NFA.Compress.Data,
                 NFA.Compress.Inter,
                 NFA.Quiz,
                 NFA.Convert,
                 Prolog.Unify,
                 Prolog.Data,
                 Prolog.Substitution,
                 Machine.Numerical.Type,
                 Machine.Numerical.Config,
                 Machine.Numerical.Make,
                 Machine.Numerical.Inter,
                 Machine.Fun,
                 Machine.Akzeptieren,
                 Machine.Acceptor.Type,
                 Machine.Acceptor.Inter2,
                 Machine.Acceptor.Type2,
                 Machine.Acceptor.Inter,
                 Machine.Var,
                 Machine.Vorrechnen,
                 Machine.Class,
                 Machine.History,
                 Code.Type,
                 Code.Burrows_Wheeler,
                 Code.Measure,
                 Code.Move_To_Front.Work,
                 Code.Move_To_Front.Data,
                 Code.Class,
                 Code.Formal,
                 Code.Nonprefix,
                 Code.Param,
                 Code.Check,
                 Code.Burrows_Wheeler.Work,
                 Code.Burrows_Wheeler.Data,
                 Code.Huffman.Test,
                 Code.Huffman.Throw,
                 Code.Huffman.LR,
                 Code.Huffman.Config,
                 Code.Huffman.Make,
                 Code.Huffman.Boiler,
                 Code.Huffman.Partial,
                 Code.LZ.Book,
                 Code.LZ.Data,
                 Code.Quiz,
                 Code.LZ,
                 Code.Move_To_Front,
                 Code.Nocode,
                 Code.Hamming,
                 Code.Hamming.Check,
                 Code.Hamming.Data,
                 Code.Hamming.Partial,
                 Code.Compress,
                 Blank,
                 Type.Infer,
                 Type.Tree,
                 Type.Check,
                 Type.Quiz,
                 Type.Data,
                 Graph.Util,
                 Graph.TreeWidth,
                 Graph.Bi.Config,
                 Graph.Bi.Proof,
                 Graph.Bi.Quiz,
                 Graph.Bi.Plain,
                 Graph.Iso,
                 Graph.Col.Greedy.Central,
                 Graph.Col.Config,
                 Graph.Col.Gadget.Central,
                 Graph.Col.Gadget.Config,
                 Graph.Col.Quiz,
                 Graph.Col.Plain,
                 Graph.VC.Input,
                 Graph.VC.Central,
                 Graph.VC.Param,
                 Graph.VC.ParamSAT,
                 Graph.VC.VCSAT,
                 Graph.VC.SAT,
                 Graph.TSP.Search,
                 Graph.TSP.Tropic,
                 Graph.TSP.Quiz,
                 Graph.TSP.Plain,
                 Graph.PartialKTree,
                 Graph.MST.Kruskal,
                 Graph.MST.Config,
                 Graph.MST.Quiz,
                 Graph.MST.DSF,
                 Graph.MST.Plain,
                 Graph.Series_Parallel.Type,
                 Graph.Series_Parallel.Op,
                 Graph.Op,
                 Graph.Graceful.Central,
                 Graph.Weighted.Dot,
                 Graph.Weighted.Data,
                 Graph.PartialKTree.Central,
                 Graph.PartialKTree.Config,
                 Graph.PartialKTree.Cliques,
                 Graph.PartialKTree.Quiz,
                 Graph.Cross,
                 Graph.Ramsey,
                 Graph.Cage.Central,
                 Graph.Cage.Config,
                 Graph.Selfcom,
                 Graph.Kreisfrei,
                 Graph.Circle.Config,
                 Graph.Circle.Quiz,
                 Graph.Circle.Plain,
                 Graph.Color,
                 Graph.Van_der_Waerden,
                 Graph.Bisekt.Config,
                 Graph.Bisekt.Quiz,
                 Graph.Bisekt.Data,
                 Graph.Bisekt.Plain,
                 Graph.Way.Input,
                 Graph.Way.Config,
                 Graph.Way.Quiz,
                 Graph.Way.Plain,
                 Graph.Nachbar,
                 Graph.MinSep,
                 Graph.Connected,
                 Graph.Hamilton.Config,
                 Graph.Hamilton.Quiz,
                 Graph.Hamilton.Plain,
                 Graph.Weighted,
                 Graph.Restriction,
                 Turing,
                 JVM,
                 Partition.Roll,
                 Partition.Beispiel,
                 Partition.Central,
                 Partition.Param,
                 Util.Datei.Base,
                 Util.FailDoc,
                 Util.Datei,
                 Util.Cache,
                 Upload,
                 Convert.Language,
                 Convert.Type,
                 Convert.Input,
                 Fun.Type,
                 Fun.Step,
                 Fun.Direct,
                 Fun.Create,
                 Fun.Machine,
                 Fun.Cache,
                 Fun.Make,
                 Fun.State,
                 Fun.Check,
                 Fun.Quiz,
                 Fun.Quiz.Type,
                 Fun.Quiz.Type2,
                 Fun.Matrix,
                 Fun.Examples,
                 Fun.Table,
                 Fun.Direct.Config,
                 Binpack.FFD,
                 Binpack.Approximation,
                 Binpack.ParamTH,
                 Binpack.Param,
                 Binpack.Instance,
                 Binpack.Interface,
                 Binpack.Example,
                 Binpack.Quiz,
                 Binpack.InstanceTH,
                 PL.Util,
                 PL.Struktur,
                 PL.Find_Model,
                 PL.Type,
                 PL.Semantik,
                 PL.Reader,
                 PL.Tree,
                 PL.Param,
                 PL.ToDoc,
                 PL.Interpretation,
                 PL.Signatur,
                 PL.Data,
                 Number.Float.To,
                 Number.Float.Roll,
                 Number.Float.From,
                 Number.Float.Config,
                 Number.Float.Near,
                 Number.Float.Data,
                 Number.Wert,
                 Number.Base.Central,
                 Number.Base.Param,
                 Number.Base.Data,
                 Lambda.Basic,
                 Lambda.Position,
                 Lambda.Roll,
                 Lambda.Type,
                 Lambda.Derive,
                 Lambda.Step,
                 Lambda.IO,
                 Lambda.Backward_Join.Solution,
                 Lambda.Backward_Join.Instance,
                 Lambda.Apply,
                 Lambda.Tree,
                 Lambda.Backward_Join,
                 Lambda.Derive.Config,
                 Lambda.Derive.Instance,
                 Lambda.Quiz,
                 Lambda.Data,
                 Lambda.Alpha,
                 Language.Power,
                 Language.RX,
                 Language.Type,
                 Language.Pali,
                 Language.Genau,
                 Language.Center,
                 Language.Sampler,
                 Language.ABCdiff,
                 Language.Syntax,
                 Language.Mutate,
                 Language.IJK,
                 Language.Grammatik,
                 Language.Lukas,
                 Language.Gleich,
                 Language.Inter,
                 Language.AK,
                 Diffie_Hellman.Break,
                 Diffie_Hellman.Config,
                 Diffie_Hellman.Param,
                 Diffie_Hellman.Quiz,
                 String_Matching.Option,
                 String_Matching.KMP.Semantics,
                 String_Matching.KMP.Central,
                 String_Matching.KMP.Instance,
                 String_Matching.Config,
                 String_Matching.BM.Semantics,
                 String_Matching.BM.Central,
                 String_Matching.BM.Instance,
                 Boolean2.Instance,
                 Boolean2.Quiz,
                 Sortier.Common.Util,
                 Sortier.Common.Config,
                 Sortier.Median.Param,
                 Sortier.Median.Check,
                 Sortier.Programm.Exec,
                 Sortier.Programm.Type,
                 Sortier.Programm.Check,
                 Sortier.Programm.Example,
                 Sortier.Netz.Bild,
                 Sortier.Netz.Type,
                 Sortier.Netz.Xml,
                 Sortier.Netz.Check,
                 Sortier.Netz.Example,
                 Sortier.Netz.Rechnung,
                 Sortier.Merge.Param,
                 Sortier.Merge.Check,
                 KnapsackFraction.Solve,
                 KnapsackFraction.Central,
                 KnapsackFraction.Param,
                 Collatz.Roll,
                 Collatz.Parameter,
                 Collatz.Long,
                 Collatz.Inverse,
                 Collatz.Config,
                 Collatz.Plain,
                 Expression.Op,
                 CNF.Eval,
                 CNF.Form,
                 CNF.Example,
                 CNF.Optimize,
                 JVM.Type,
                 JVM.Builtin,
                 JVM.Step,
                 JVM.Machine,
                 JVM.Make,
                 JVM.State,
                 JVM.Check,
                 JVM.Example,
                 JVM.Memory,
                 Condition,
                 NPDA.Nachfolger,
                 NPDA.Det,
                 NPDA.Dot,
                 NPDA.Type,
                 NPDA.Inter2,
                 NPDA.Beispiel,
                 NPDA.Konfiguration,
                 NPDA.Config2,
                 NPDA.Machine,
                 NPDA.Sane,
                 NPDA.Property,
                 NPDA.Config,
                 NPDA.Check,
                 NPDA.Accept_by,
                 NPDA.Inter,
                 Tree.Dot,
                 Tree.Class,
                 SCS.Config,
                 SCS.Instance,
                 SCS.Quiz,
                 SCS.Data,
                 Upload.Config,
                 Faktor.Times.Param,
                 Faktor.Certify,
                 Faktor.Type,
                 Faktor.Euklid,
                 Faktor.Faktor,
                 Faktor.Prim,
                 Faktor.Euklid.Param,
                 Faktor.Times,
                 Faktor.Inverse,
                 Faktor.Inverse.Param,
                 Faktor.Param,
                 Faktor.Quiz,
                 SAT.Wert,
                 SAT.Types,
                 SAT.Beispiel,
                 SAT.Generator,
                 SAT.Param,
                 SAT.State,
                 SAT.CNF,
                 SAT.SAT,
                 Robots.Nice,
                 Robots.Exact,
                 Robots.Inverse,
                 Robots.Generator,
                 Robots.Config,
                 Robots.Interface,
                 Robots.Quiz,
                 Robots.Hull,
                 Robots.Data,
                 Robots.Move,
                 Robots.Examples,
                 Robots.Solver,
                 Robots.Final,
                 Haskell.Blueprint.Central,
                 Haskell.Blueprint.Data,
                 Haskell.Blueprint.FileContents,
                 Haskell.Blueprint.Match,
                 Haskell.Syntax.Central,
                 Prolog.Programming.Central,
                 Prolog.Programming.Data,
                 Prolog.Programming.GraphViz,
                 Prolog.Programming.Hex,
                 Prolog.Unifier.Central,
                 Prolog.Unifier.Data,
                 Syntax.Central,
                 Syntax.Checker,
                 Syntax.Generator,
                 Syntax.Generics,
                 Syntax.Data,
                 Syntax.LaTeX,
                 Syntax.Printer,
                 Syntax.Quiz,
                 Syntax.Syntax,
                 Syntax.Transformer
