Name:           autotool-super
Version:        1.0
-- License:        GPL
-- License-File:   LICENSE
Author:         Johannes Waldmann
Maintainer:     Johannes Waldmann
Homepage:       http://dfa.imn.htwk-leipzig.de/auto/
Category:       E-Testing
Synopsis:       autotool CGI
Description:
  This package provides Super.cgi, a frontend to the autotool problem
  collection. It manages schools, courses, users, submissions. See
  autolib-trial for a simpler frontend to the problems.
Stability:      Experimental
Cabal-Version:  >=1.2
Build-Type:     Simple

Executable Super.cgi
  Build-Depends:
    autolib-todoc,autolib-data,autolib-reader,
    autolib-output,autolib-reporter,
    autolib-util,autolib-fa,autolib-fta,
    autolib-graph,autolib-relation,autolib-exp,
    autolib-rewriting,autolib-dot,autolib-algorithm,
    autotool-collection,
    base == 4.*,parsec >= 2 && < 4, old-locale,old-time,
    xhtml==3000.*,cgi,
    hsql>=1.7.1,hsql-mysql>=1.7.1,
    containers,directory,random,mtl,
    process,unix,
    autolib-transport,
    obdd,array,pretty,
    utf8-string
  Extensions: ScopedTypeVariables, DeriveDataTypeable
  Hs-source-dirs: src, src/control, common
  Main-Is: Inter/Super.hs
